Fix table scroll on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -203,6 +203,10 @@ pre code {
  * Table
  */
  table {
+  @include media-query($on-laptop) {
+    display: block;
+    overflow: scroll;
+  }
   margin-bottom: 16px;
   border-spacing: 0;
   border-collapse: collapse;
